Trabalho-Final-V2/JavythonParser.py
# Generated from Javython.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JavythonParser ( Parser ):

    grammarFileName = "Javython.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "':'", "';'", "'end'", "'main'", 
                     "'decIds'", "'='", "','", "'int'", "'real'", "'str'", 
                     "'bool'", "'void'", "'('", "')'", "'{'", "'}'", "'return'", 
                     "'input'", "'print'", "'break'", "'if'", "'else'", 
                     "'while'", "'for'", "'++'", "'--'", "'!'", "'-'", "'*'", 
                     "'/'", "'+'", "'=='", "'!='", "'>'", "'<'", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "NUM_INT", 
                      "NUM_REAL", "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_main = 1
    RULE_decIds = 2
    RULE_declVar = 3
    RULE_declConst = 4
    RULE_idList = 5
    RULE_tipo = 6
    RULE_metodo = 7
    RULE_parametros = 8
    RULE_parametro = 9
    RULE_returnCmd = 10
    RULE_comando = 11
    RULE_atribuicao = 12
    RULE_inputCmd = 13
    RULE_printCmd = 14
    RULE_breakCmd = 15
    RULE_ifCmd = 16
    RULE_whileCmd = 17
    RULE_forCmd = 18
    RULE_forInit = 19
    RULE_forUpdate = 20
    RULE_incDecUpdate = 21
    RULE_atribuicaoFor = 22
    RULE_incDecFor = 23
    RULE_expressao = 24
    RULE_incremento = 25
    RULE_decremento = 26
    RULE_chamadaFuncao = 27

    ruleNames =  [ "program", "main", "decIds", "declVar", "declConst", 
                   "idList", "tipo", "metodo", "parametros", "parametro", 
                   "returnCmd", "comando", "atribuicao", "inputCmd", "printCmd", 
                   "breakCmd", "ifCmd", "whileCmd", "forCmd", "forInit", 
                   "forUpdate", "incDecUpdate", "atribuicaoFor", "incDecFor", 
                   "expressao", "incremento", "decremento", "chamadaFuncao" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    ID=39
    NUM_INT=40
    NUM_REAL=41
    STRING=42
    WS=43
    COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def main(self):
            return self.getTypedRuleContext(JavythonParser.MainContext,0)


        def decIds(self):
            return self.getTypedRuleContext(JavythonParser.DecIdsContext,0)


        def metodo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.MetodoContext)
            else:
                return self.getTypedRuleContext(JavythonParser.MetodoContext,i)


        def getRuleIndex(self):
            return JavythonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JavythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(JavythonParser.T__0)
            self.state = 57
            self.match(JavythonParser.T__1)
            self.state = 58
            self.match(JavythonParser.ID)
            self.state = 59
            self.match(JavythonParser.T__2)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 60
                self.decIds()


            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 15872) != 0):
                self.state = 63
                self.metodo()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.main()
            self.state = 70
            self.match(JavythonParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decIds(self):
            return self.getTypedRuleContext(JavythonParser.DecIdsContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.ComandoContext)
            else:
                return self.getTypedRuleContext(JavythonParser.ComandoContext,i)


        def getRuleIndex(self):
            return JavythonParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = JavythonParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(JavythonParser.T__4)
            self.state = 73
            self.match(JavythonParser.T__1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 74
                self.decIds()


            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 549814272000) != 0):
                self.state = 77
                self.comando()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecIdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declVar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.DeclVarContext)
            else:
                return self.getTypedRuleContext(JavythonParser.DeclVarContext,i)


        def declConst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.DeclConstContext)
            else:
                return self.getTypedRuleContext(JavythonParser.DeclConstContext,i)


        def getRuleIndex(self):
            return JavythonParser.RULE_decIds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecIds" ):
                listener.enterDecIds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecIds" ):
                listener.exitDecIds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecIds" ):
                return visitor.visitDecIds(self)
            else:
                return visitor.visitChildren(self)




    def decIds(self):

        localctx = JavythonParser.DecIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decIds)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(JavythonParser.T__5)
            self.state = 84
            self.match(JavythonParser.T__1)
            self.state = 87 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 87
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 85
                        self.declVar()
                        pass

                    elif la_ == 2:
                        self.state = 86
                        self.declConst()
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 89 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(JavythonParser.IdListContext,0)


        def tipo(self):
            return self.getTypedRuleContext(JavythonParser.TipoContext,0)


        def getRuleIndex(self):
            return JavythonParser.RULE_declVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclVar" ):
                listener.enterDeclVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclVar" ):
                listener.exitDeclVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclVar" ):
                return visitor.visitDeclVar(self)
            else:
                return visitor.visitChildren(self)




    def declVar(self):

        localctx = JavythonParser.DeclVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declVar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.idList()
            self.state = 92
            self.match(JavythonParser.T__1)
            self.state = 93
            self.tipo()
            self.state = 94
            self.match(JavythonParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(JavythonParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return JavythonParser.RULE_declConst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclConst" ):
                listener.enterDeclConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclConst" ):
                listener.exitDeclConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclConst" ):
                return visitor.visitDeclConst(self)
            else:
                return visitor.visitChildren(self)




    def declConst(self):

        localctx = JavythonParser.DeclConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declConst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(JavythonParser.ID)
            self.state = 97
            self.match(JavythonParser.T__6)
            self.state = 98
            self.expressao(0)
            self.state = 99
            self.match(JavythonParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JavythonParser.ID)
            else:
                return self.getToken(JavythonParser.ID, i)

        def getRuleIndex(self):
            return JavythonParser.RULE_idList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdList" ):
                listener.enterIdList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdList" ):
                listener.exitIdList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)




    def idList(self):

        localctx = JavythonParser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(JavythonParser.ID)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 102
                self.match(JavythonParser.T__7)
                self.state = 103
                self.match(JavythonParser.ID)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JavythonParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = JavythonParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15872) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetodoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(JavythonParser.TipoContext,0)


        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def parametros(self):
            return self.getTypedRuleContext(JavythonParser.ParametrosContext,0)


        def decIds(self):
            return self.getTypedRuleContext(JavythonParser.DecIdsContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.ComandoContext)
            else:
                return self.getTypedRuleContext(JavythonParser.ComandoContext,i)


        def getRuleIndex(self):
            return JavythonParser.RULE_metodo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetodo" ):
                listener.enterMetodo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetodo" ):
                listener.exitMetodo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetodo" ):
                return visitor.visitMetodo(self)
            else:
                return visitor.visitChildren(self)




    def metodo(self):

        localctx = JavythonParser.MetodoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_metodo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.tipo()
            self.state = 112
            self.match(JavythonParser.ID)
            self.state = 113
            self.match(JavythonParser.T__13)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 15872) != 0):
                self.state = 114
                self.parametros()


            self.state = 117
            self.match(JavythonParser.T__14)
            self.state = 118
            self.match(JavythonParser.T__15)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 119
                self.decIds()


            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 549814272000) != 0):
                self.state = 122
                self.comando()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(JavythonParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.ParametroContext)
            else:
                return self.getTypedRuleContext(JavythonParser.ParametroContext,i)


        def getRuleIndex(self):
            return JavythonParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = JavythonParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.parametro()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 131
                self.match(JavythonParser.T__7)
                self.state = 132
                self.parametro()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(JavythonParser.TipoContext,0)


        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def getRuleIndex(self):
            return JavythonParser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = JavythonParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parametro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.tipo()
            self.state = 139
            self.match(JavythonParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(JavythonParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return JavythonParser.RULE_returnCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnCmd" ):
                listener.enterReturnCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnCmd" ):
                listener.exitReturnCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnCmd" ):
                return visitor.visitReturnCmd(self)
            else:
                return visitor.visitChildren(self)




    def returnCmd(self):

        localctx = JavythonParser.ReturnCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(JavythonParser.T__17)
            self.state = 142
            self.expressao(0)
            self.state = 143
            self.match(JavythonParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribuicao(self):
            return self.getTypedRuleContext(JavythonParser.AtribuicaoContext,0)


        def inputCmd(self):
            return self.getTypedRuleContext(JavythonParser.InputCmdContext,0)


        def printCmd(self):
            return self.getTypedRuleContext(JavythonParser.PrintCmdContext,0)


        def ifCmd(self):
            return self.getTypedRuleContext(JavythonParser.IfCmdContext,0)


        def whileCmd(self):
            return self.getTypedRuleContext(JavythonParser.WhileCmdContext,0)


        def forCmd(self):
            return self.getTypedRuleContext(JavythonParser.ForCmdContext,0)


        def breakCmd(self):
            return self.getTypedRuleContext(JavythonParser.BreakCmdContext,0)


        def incremento(self):
            return self.getTypedRuleContext(JavythonParser.IncrementoContext,0)


        def decremento(self):
            return self.getTypedRuleContext(JavythonParser.DecrementoContext,0)


        def returnCmd(self):
            return self.getTypedRuleContext(JavythonParser.ReturnCmdContext,0)


        def chamadaFuncao(self):
            return self.getTypedRuleContext(JavythonParser.ChamadaFuncaoContext,0)


        def getRuleIndex(self):
            return JavythonParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = JavythonParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comando)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.atribuicao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.inputCmd()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.printCmd()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.ifCmd()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.whileCmd()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 150
                self.forCmd()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 151
                self.breakCmd()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 152
                self.incremento()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 153
                self.decremento()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 154
                self.returnCmd()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 155
                self.chamadaFuncao()
                self.state = 156
                self.match(JavythonParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JavythonParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(JavythonParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return JavythonParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = JavythonParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(JavythonParser.ID)
            self.state = 161
            self.match(JavythonParser.T__6)
            self.state = 162
            self.expressao(0)
            self.state = 163
            self.match(JavythonParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(JavythonParser.IdListContext,0)


        def getRuleIndex(self):
            return JavythonParser.RULE_inputCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputCmd" ):
                listener.enterInputCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputCmd" ):
                listener.exitInputCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputCmd" ):
                return visitor.visitInputCmd(self)
            else:
                return visitor.visitChildren(self)




    def inputCmd(self):

        localctx = JavythonParser.InputCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_inputCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(JavythonParser.T__18)
            self.state = 166
            self.match(JavythonParser.T__13)
            self.state = 167
            self.idList()
            self.state = 168
            self.match(JavythonParser.T__14)
            self.state = 169
            self.match(JavythonParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavythonParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(JavythonParser.ExpressaoContext,i)

